# rp2040

./: .pre-commit-config.yaml  Cargo.toml  ReadMe.md
.cargo/: config.toml
src/: main.rs
